--- a/package.json
+++ b/package.json
@@ -1,50 +1,70 @@
 {
-    "name": "cpapp",
-    "version": "1.0.0",
-    "description": "A simple CAP project.",
-    "repository": "<Add your repository here>",
-    "license": "UNLICENSED",
-    "private": true,
-    "dependencies": {
-        "@sap/cds": "^6",
-        "@sap/xssec": "^3",
-        "express": "^4",
-        "hdb": "^0.19.0",
-        "passport": "^0"
-    },
-    "devDependencies": {
-        "@sap/ux-specification": "^1.102.14",
-        "rimraf": "^3.0.2",
-        "sqlite3": "^5.0.4"
-    },
-    "engines": {
-        "node": "^16"
-    },
-    "scripts": {
-        "start": "cds run",
-        "watch-risks": "cds watch --open risks/webapp/index.html?sap-ui-xx-viewCache=false",
-        "watch-mitigations": "cds watch --open mitigations/webapp/index.html?sap-ui-xx-viewCache=false",
-        "undeploy": "cf undeploy cpapp --delete-services --delete-service-keys --delete-service-brokers",
-        "build": "rimraf resources mta_archives && mbt build --mtar archive",
-        "deploy": "cf deploy mta_archives/archive.mtar --retries 1"
-    },
-    "sapux": [
-        "app/risks",
-        "app/mitigations"
-    ],
-    "cds": {
-        "requires": {
-            "[production]": {
-                "db": {
-                    "kind": "hana-cloud"
-                },
-                "auth": {
-                    "kind": "xsuaa"
-                }
-            },
-            "db": {
-                "kind": "sql"
-            }
+  "name": "cpapp",
+  "version": "1.0.0",
+  "description": "A simple CAP project.",
+  "repository": "<Add your repository here>",
+  "license": "UNLICENSED",
+  "private": true,
+  "dependencies": {
+    "@sap-cloud-sdk/http-client": "^2.14.0",
+    "@sap-cloud-sdk/util": "^2.14.0",
+    "@sap/cds": "^6",
+    "@sap/xssec": "^3",
+    "express": "^4",
+    "hdb": "^0.19.0",
+    "only": "^0.0.2",
+    "package.json": "^2.0.1",
+    "passport": "^0"
+  },
+  "devDependencies": {
+    "@sap/ux-specification": "^1.102.14",
+    "rimraf": "^3.0.2",
+    "sqlite3": "^5.0.4"
+  },
+  "engines": {
+    "node": "^16"
+  },
+  "scripts": {
+    "start": "cds run",
+    "watch-risks": "cds watch --open risks/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-mitigations": "cds watch --open mitigations/webapp/index.html?sap-ui-xx-viewCache=false",
+    "undeploy": "cf undeploy cpapp --delete-services --delete-service-keys --delete-service-brokers",
+    "build": "rimraf resources mta_archives && mbt build --mtar archive",
+    "deploy": "cf deploy mta_archives/archive.mtar --retries 1"
+  },
+  "sapux": [
+    "app/risks",
+    "app/mitigations"
+  ],
+  "cds": {
+    "hana" : { "deploy-format": "hdbtable" },
+    "requires": {
+      "[production]": {
+        "db": {
+          "kind": "hana-cloud"
+        },
+        "auth": {
+          "kind": "xsuaa"
         }
+      },
+      "db": {
+        "kind": "sql"
+      },
+      "API_BUSINESS_PARTNER": {
+        "kind": "odata-v2",
+        "model": "srv/external/API_BUSINESS_PARTNER",
+        "[sandbox]": {
+          "credentials": {
+              "url": "https://sandbox.api.sap.com/s4hanacloud/sap/opu/odata/sap/API_BUSINESS_PARTNER"
+          }
+        },
+        "[production]": {
+          "credentials": {
+              "path": "/sap/opu/odata/sap/API_BUSINESS_PARTNER",
+              "destination": "cpapp-bupa"
+          }
+        }
+      }
     }
+  }
 }
